style/style.css
/* ================================================================ */

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
/* ================================================================ */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* ================================================================ */

/* GENERAL FORMATTING */

/* ================================================================ */

html {
    height: 100%;
    width: 100%;
    background-color: black;
    background-image: url("https://i.imgur.com/AACsBE5.png");
    background-attachment: fixed;
    background-position: center center;
    background-size: cover;
    font-family: arial;
    font-weight: bold;
    color: white;
    z-index: 0;
}
html a {
    text-decoration: none;
    color: white;
}

nav {
    z-index: 98;
}

#circle img {
    width: 100%;
    animation: rotation 8s infinite linear;
}
@keyframes rotation {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(359deg);
    }
}

#mode-button {
    display: grid;
}
#mode-button-one, #mode-button-two {
    grid-column: 1;
    grid-row: 1;
}
#mode-button-one {
    width: 7.9vw;
    height: 8.2vw;
    background-color: white;
    border-radius: 50%;
    position: relative;
    animation: mode-button-spin 4s linear infinite;
    mix-blend-mode: difference;
}
#mode-button-two {
    width: 7.8vw;
    height: 8.3vw;
    background-color: white;
    border-radius: 50%;
    position: relative;
    animation: mode-button-spin 4.4s linear infinite reverse;
    mix-blend-mode: difference;
}
@keyframes mode-button-spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

#threejs {
    position: absolute;
    width: 100vw;
    height: 100vh;
    top: 0%;
    left: 0%;
    pointer-events: none;
    filter: saturate(250%);
    z-index: 1;
    cursor: none;
}

#mode-filter {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0%;
    left: 0%;
    display: none;
    background-color: white;
    mix-blend-mode: difference;
    z-index: 100;
    pointer-events: none;
}

/* ================================================================ */

/* 320px - Mobile ==> 1 */

/* ================================================================ */

@media only screen and (min-width: 320px) {
     /* ------------------------------------------------------------ */
    .tablet, .landscape, .desktop {
        display: none;
    }
    .mobile {
        display: block;
    }
    /* ------------------------------------------------------------ */

    #navbar {
        display: grid;
    }
    #japanese {
        grid-row: 1;
        grid-column: 1;
        max-width: 120%;
        transform: translate(-60%, -6%);
    }
    #nav-text {
        grid-row: 1;
        grid-column: 2;
        transform: translate(-25%, -3%);
    }

    #nav-name {
        font-size: 16vw;
        padding-bottom: 1%;
    }

    .nav-link {
        font-size: 12vw;
        padding-bottom: 1%;
    }
    .nav-link a {
        cursor: none;
    }
    .nav-link:hover {
        font-size: 12.1vw;
    }
    
    #mode-button {
        max-width: 55%;
        transform: translate(100%,-305%);
    }
    #mode-button-one {
        width: 34vw;
        height: 33.2vw;
    }
    #mode-button-two {
        width: 32.7vw;
        height: 34.2vw;
    }
}

/* ================================================================ */

/* 480px - Tablet ==> 2 */

/* ================================================================ */

@media only screen and (min-width: 480px) {
    /* ------------------------------------------------------------ */
    .mobile, .landscape, .desktop {
        display: none;
    }
    .tablet {
        display: block;
    }
    /* ------------------------------------------------------------ */

    #nav-text {
        transform: translate(-15%, -3%);
    }

    #mode-button {
        max-width: 40%; 
        transform: translate(155%,-272%);
    }
    #mode-button-one {
        width: 30vw;
        height: 29.2vw;
    }
    #mode-button-two {
        width: 29.8vw;
        height: 30.4vw;
    }
}

/* ================================================================ */

/* 768px - Large Tablet / Landscape Mobile ==> 3 */

/* ================================================================ */

@media only screen and (min-width: 768px) {
    /* ------------------------------------------------------------ */
    .mobile, .tablet, .desktop {
        display: none;
    }
    .landscape {
        display: block;
    }
    /* ------------------------------------------------------------ */

    #nav-text {
        transform: translate(-12%, -4%);
    }

    #mode-button {
        padding-top: 3.5%;
        max-width: 36%;
        transform: translate(165%,-240%);
    }
    #mode-button-one {
        width: 20vw;
        height: 19.8vw;
    }
    #mode-button-two {
        width: 19.2vw;
        height: 20.4vw;
    }
}

/* ================================================================ */

/* 1024px - Desktop ==> 4 */

/* ================================================================ */

@media only screen and (min-width: 1024px) {
    /* ------------------------------------------------------------ */
    .mobile, .tablet, .landscape {
        display: none;
    }
    .desktop {
        display: block;
    }
    /* ------------------------------------------------------------ */
    html {
        cursor: none;
    }

    #circle {
        position: absolute;
        width: 9%;
        display: block;
        transform: translate(-61%,-60%);
        mix-blend-mode: difference;
        pointer-events: none;
        z-index: 99;
    }
    /* ------------------------------------------------------------ */

    /* INDEX */

    /* ------------------------------------------------------------ */

    #japanese {
        max-width: 92%;
        animation: japanese-in 1s both;
    }
    @keyframes japanese-in {
        0% {
            transform: translateY(-100%);
        }
        100% {
            transform: translateY(-6%);
        }
    }

    #nav-text {
        transform: translate(-1.2%, -6%);
    }
    #nav-name {
        font-size: 12vw;
    }
    .nav-link {
        font-size: 5vw;
        padding-left: 0.8%;
        padding-bottom: 0.5%;
    }
    .nav-link a {
        cursor: none;
    }
    .nav-link:hover {
        font-size: 5.1vw;
    }

    #mode-button {
        max-width: 32%;
        transform: translate(310%,-210%);
    }
    #mode-button-one {
        width: 9vw;
        height: 9.2vw;
    }
    #mode-button-two {
        width: 8.8vw;
        height: 9.4vw;
    }
}

